1.商品列表页面   2搜索页面

--- a/ShoppingMall/app/src/main/res/values/strings.xml
+++ b/ShoppingMall/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">ShoppingMall</string>
+    <string name="goodslist">商品列表</string>
+    <string name="serch_edittext">输入您期望的内容</string>
 </resources>
